@@ -1,6 +1,7 @@
 package com.dank1234.plugin.global.npcs;
 
 import com.dank1234.plugin.Main;
+import com.google.gson.JsonArray;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
 import com.mojang.authlib.GameProfile;
@@ -26,19 +27,22 @@ import org.bukkit.craftbukkit.CraftWorld;
 import org.bukkit.craftbukkit.entity.CraftPlayer;
 import org.bukkit.entity.Player;
 import org.bukkit.event.entity.CreatureSpawnEvent;
-import org.checkerframework.checker.units.qual.C;
 
-import java.io.InputStreamReader;
-import java.lang.reflect.Field;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.util.Collections;
-import java.util.EnumSet;
-import java.util.List;
-import java.util.UUID;
+import java.io.IOException;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.util.*;
+import java.util.concurrent.CompletableFuture;
 import java.util.function.Consumer;
 
 public class NPC {
+    private static final String MOJANG_PROFILE_URL = "https://api.mojang.com/users/profiles/minecraft/";
+    private static final String MOJANG_SESSION_URL = "https://sessionserver.mojang.com/session/minecraft/profile/";
+    private static final HttpClient httpClient = HttpClient.newHttpClient();
+    private static final Map<String, String> skinCache = new HashMap<>();
+
     private final ServerPlayer serverPlayer;
     private final Consumer<Player> clickAction;
 
@@ -55,8 +59,6 @@ public class NPC {
                 ClientInformation.createDefault()
         );
 
-        addSkinToProfile(profile, skinName);
-
         serverPlayer.connection = new ServerGamePacketListenerImpl(
                 MinecraftServer.getServer(),
                 new Connection(PacketFlow.SERVERBOUND),
@@ -68,10 +70,15 @@ public class NPC {
         serverPlayer.setGameMode(GameType.CREATIVE);
     }
 
-    public static NPC create(String displayName, String skinName, Location location, Consumer<Player> clickAction) {
+    public static CompletableFuture<NPC> create(String displayName, String skinName, Location location, Consumer<Player> clickAction) {
         NPC npc = new NPC(displayName, skinName, location, clickAction);
-        npc.spawn();
-        return npc;
+        return npc.initializeAndSpawn();
+    }
+
+    private CompletableFuture<NPC> initializeAndSpawn() {
+        return fetchSkinTextureAsync(((GameProfile) serverPlayer.getGameProfile()), ((GameProfile) serverPlayer.getGameProfile()).getName())
+                .thenRun(this::spawn)
+                .thenApply(v -> this);
     }
 
     private void spawn() {
@@ -81,97 +88,104 @@ public class NPC {
 
     public void showToPlayer(Player player) {
         Bukkit.getScheduler().runTask(Main.get(), () -> {
-            for (Player onlinePlayer : Bukkit.getOnlinePlayers()) {
-                if (onlinePlayer instanceof CraftPlayer) {
-                    ServerGamePacketListenerImpl connection = ((CraftPlayer) onlinePlayer).getHandle().connection;
+            if (!(player instanceof CraftPlayer craftPlayer)) return;
 
-                    ClientboundPlayerInfoUpdatePacket.Entry playerInfoEntry = new ClientboundPlayerInfoUpdatePacket.Entry(
-                            serverPlayer.getUUID(),
-                            serverPlayer.getGameProfile(),
-                            false,
-                            0,
-                            GameType.CREATIVE,
-                            Component.literal(serverPlayer.getName().getString()),
-                            0,
-                            null
-                    );
+            ServerGamePacketListenerImpl connection = craftPlayer.getHandle().connection;
 
-                    ClientboundPlayerInfoUpdatePacket addPlayerPacket = new ClientboundPlayerInfoUpdatePacket(
-                            EnumSet.of(ClientboundPlayerInfoUpdatePacket.Action.ADD_PLAYER),
-                            List.of(playerInfoEntry)
-                    );
-                    connection.send(addPlayerPacket);
+            ClientboundPlayerInfoUpdatePacket.Entry playerInfoEntry = new ClientboundPlayerInfoUpdatePacket.Entry(
+                    serverPlayer.getUUID(),
+                    serverPlayer.getGameProfile(),
+                    Collections.emptyList(),
+                    0,
+                    GameType.CREATIVE,
+                    Component.literal(serverPlayer.getName().getString()),
+                    0,
+                    null
+            );
 
-                    ClientboundAddEntityPacket addEntityPacket = new ClientboundAddEntityPacket(
-                            serverPlayer.getId(),
-                            serverPlayer.getUUID(),
-                            serverPlayer.getX(),
-                            serverPlayer.getY(),
-                            serverPlayer.getZ(),
-                            serverPlayer.getXRot(),
-                            serverPlayer.getYRot(),
-                            serverPlayer.getType(),
-                            0,
-                            Vec3.ZERO,
-                            serverPlayer.yHeadRot
-                    );
-                    connection.send(addEntityPacket);
-                }
-            }
+            ClientboundPlayerInfoUpdatePacket addPlayerPacket = new ClientboundPlayerInfoUpdatePacket(
+                    ClientboundPlayerInfoUpdatePacket.Action.ADD_PLAYER,
+                    Collections.singletonList(playerInfoEntry)
+            );
+            connection.send(addPlayerPacket);
+
+            ClientboundAddEntityPacket addEntityPacket = new ClientboundAddEntityPacket(
+                    serverPlayer.getId(),
+                    serverPlayer.getUUID(),
+                    serverPlayer.getX(),
+                    serverPlayer.getY(),
+                    serverPlayer.getZ(),
+                    serverPlayer.getXRot(),
+                    serverPlayer.getYRot(),
+                    serverPlayer.getType(),
+                    0,
+                    Vec3.ZERO,
+                    serverPlayer.yHeadRot
+            );
+            connection.send(addEntityPacket);
         });
 
         Bukkit.getScheduler().runTaskLater(Main.get(), () -> {
-            for (Player onlinePlayer : Bukkit.getOnlinePlayers()) {
-                if (onlinePlayer instanceof CraftPlayer) {
-                    ServerGamePacketListenerImpl connection = ((CraftPlayer) onlinePlayer).getHandle().connection;
+            Bukkit.getOnlinePlayers().forEach(player -> {
+                if (player instanceof CraftPlayer craftPlayer) {
+                    ServerGamePacketListenerImpl connection = craftPlayer.getHandle().connection;
                     connection.send(new ClientboundPlayerInfoRemovePacket(Collections.singletonList(serverPlayer.getUUID())));
                 }
-            }
+            });
         }, 20L);
     }
 
-    private void addSkinToProfile(GameProfile profile, String skinName) {
-        String texture = fetchSkinTexture(skinName);
-        if (texture != null) {
-            System.out.println(texture);
-            profile.getProperties().put("textures", new Property("textures", texture, ""));
-            serverPlayer.gameProfile = profile;
-        }else{
-            profile.getProperties().put("textures", new Property("textures", "ewogICJ0aW1lc3RhbXAiIDogMTczMzAxNDc1NDYxOCwKICAicHJvZmlsZUlkIiA6ICJmMGU3YzIzYjkzYTc0OTQ1YjgyYzZiMjFiYjk1MjdiNiIsCiAgInByb2ZpbGVOYW1lIiA6ICJkYW5rMTIzNCIsCiAgInRleHR1cmVzIiA6IHsKICAgICJTS0lOIiA6IHsKICAgICAgInVybCIgOiAiaHR0cDovL3RleHR1cmVzLm1pbmVjcmFmdC5uZXQvdGV4dHVyZS8zMWY0NzdlYjFhN2JlZWU2MzFjMmNhNjRkMDZmOGY2OGZhOTNhMzM4NmQwNDQ1MmFiMjdmNDNhY2RmMWI2MGNiIgogICAgfQogIH0KfQ==", ""));
+    private CompletableFuture<Void> fetchSkinTextureAsync(GameProfile profile, String skinName) {
+        if (skinCache.containsKey(skinName)) {
+            profile.getProperties().put("textures", new Property("textures", skinCache.get(skinName), ""));
+            return CompletableFuture.completedFuture(null);
         }
-    }
 
-    private String fetchSkinTexture(String skinName) {
-        try {
-            URL url = new URL("https://api.mojang.com/users/profiles/minecraft/" + skinName);
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestMethod("GET");
-            connection.setConnectTimeout(5000);
-            connection.setReadTimeout(5000);
+        String profileUrl = MOJANG_PROFILE_URL + skinName;
 
-            if (connection.getResponseCode() != 200) {
-                Bukkit.getLogger().warning("Could not fetch skin for: " + skinName);
-                return null;
-            }
-            JsonObject profileJson = JsonParser.parseReader(new InputStreamReader(connection.getInputStream())).getAsJsonObject();
-            String uuid = profileJson.get("id").getAsString();
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create(profileUrl))
+                .GET()
+                .build();
 
-            URL profileUrl = new URL("https://sessionserver.mojang.com/session/minecraft/profile/" + uuid + "?unsigned=false");
-            connection = (HttpURLConnection) profileUrl.openConnection();
-            connection.setRequestMethod("GET");
+        return httpClient.sendAsync(request, HttpResponse.BodyHandlers.ofString())
+                .thenCompose(response -> {
+                    if (response.statusCode() != 200) {
+                        Main.get().getLogger().warning("Could not fetch profile for: " + skinName);
+                        return CompletableFuture.completedFuture(null);
+                    }
 
-            if (connection.getResponseCode() != 200) {
-                Bukkit.getLogger().warning("Could not fetch profile for UUID: " + uuid);
-                return null;
-            }
-            JsonObject fullProfileJson = JsonParser.parseReader(new InputStreamReader(connection.getInputStream())).getAsJsonObject();
-            JsonObject properties = fullProfileJson.getAsJsonArray("properties").get(0).getAsJsonObject();
+                    JsonObject profileJson = JsonParser.parseString(response.body()).getAsJsonObject();
+                    String uuid = profileJson.get("id").getAsString();
 
-            return properties.get("value").getAsString();
-        } catch (Exception e) {
-            Bukkit.getLogger().severe("Error fetching skin texture for " + skinName + ": " + e.getMessage());
-            return null;
-        }
+                    String sessionUrl = MOJANG_SESSION_URL + uuid + "?unsigned=false";
+                    HttpRequest sessionRequest = HttpRequest.newBuilder()
+                            .uri(URI.create(sessionUrl))
+                            .GET()
+                            .build();
+
+                    return httpClient.sendAsync(sessionRequest, HttpResponse.BodyHandlers.ofString());
+                })
+                .thenAccept(sessionResponse -> {
+                    if (sessionResponse == null || sessionResponse.statusCode() != 200) {
+                        Main.get().getLogger().warning("Could not fetch session for skin: " + skinName);
+                        return;
+                    }
+
+                    JsonObject fullProfileJson = JsonParser.parseString(sessionResponse.body()).getAsJsonObject();
+                    JsonArray properties = fullProfileJson.getAsJsonArray("properties");
+                    if (properties.size() > 0) {
+                        JsonObject texturesProperty = properties.get(0).getAsJsonObject();
+                        String texture = texturesProperty.get("value").getAsString();
+                        profile.getProperties().put("textures", new Property("textures", texture, texturesProperty.has("signature") ? texturesProperty.get("signature").getAsString() : ""));
+                        skinCache.put(skinName, texture);
+                        Main.get().getLogger().info("Successfully fetched skin texture for: " + skinName);
+                    }
+                })
+                .exceptionally(e -> {
+                    Main.get().getLogger().severe("Error fetching skin texture for " + skinName + ": " + e.getMessage());
+                    return null;
+                });
     }
 
     public void handleClick(Player player) {
